metadata/force-app/main/default/objects/C2__c/C2__c.object-meta.xml
<CustomObject>
    <label>C2</label>
    <nameField>
        <label>C2 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C2s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>