metadata/force-app/main/default/objects/C2__c/fields/C2__c.field-meta.xml
<CustomField>
    <fullName>C2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C2</label>
    <referenceTo>C2__c</referenceTo>
    <relationshipLabel>C2s</relationshipLabel>
    <relationshipName>C2s</relationshipName>
    <type>Lookup</type>
</CustomField>