metadata/force-app/main/default/objects/C2__c/fields/ParentC2__c.field-meta.xml
<CustomField>
    <fullName>ParentC2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ParentC2</label>
    <referenceTo>ParentC2__c</referenceTo>
    <relationshipLabel>C2s</relationshipLabel>
    <relationshipName>C2s</relationshipName>
    <type>Lookup</type>
</CustomField>